# qstdcdec

./: CMakeLists.txt  README.md  main.cpp  qstdcdec.cpp  qstdcdec.h  qstdcdec.ui
